ui/ui-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: default
  labels:
    app: ui
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      serviceAccountName: ui-sa
      securityContext:
        fsGroup: 1000
      imagePullSecrets:
        - name: regcred
      containers:
      - name: ui
        image: public.ecr.aws/aws-containers/retail-store-sample-ui:1.2.2
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 10
        securityContext:
          capabilities:
            drop: ["ALL"]
            add: ["NET_BIND_SERVICE"]
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        resources:
          requests:
            cpu: 128m
            memory: 512Mi
          limits:
            memory: 512Mi
          volumeMounts:
          - mountPath: /tmp
            name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: default
  labels:
    app: ui
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: ui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
